UI Tweak in Doctor workbench + added arabic input class

--- a/client/src/Components/DoctorsWorkbench/doctor_workbench.css
+++ b/client/src/Components/DoctorsWorkbench/doctor_workbench.css
@@ -63,10 +63,12 @@
     border: 1px solid #3aa4a9;
     font-size: 1.3rem;
     padding-right: 3px;
-    padding-left: 3px; }
+    padding-left: 3px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3); }
   .doctor_workbench .my-calendar .calendar .col:hover {
     background: #3aa4a9;
-    cursor: pointer; }
+    cursor: pointer;
+    text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.3); }
   .doctor_workbench .my-calendar .calendar .col span {
     padding: 0;
     margin: 0;
