--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -51,6 +51,8 @@
 .ReactTable .fa-walking,
 .ReactTable .fa-file-export,
 .ReactTable .fa-sync-alt,
+.ReactTable .fa-file-alt,
+.ReactTable .fa-file-image,
 .ReactTable .fa-file-prescription,
 .ReactTable .fa-prescription,
 .ReactTable .fa-arrow-right,
@@ -77,8 +79,10 @@
 .ReactTable .fa-flask:hover,
 .ReactTable .fa-file-signature:hover,
 .ReactTable .fa-walking:hover,
+.ReactTable .fa-file-image:hover,
 .ReactTable .fa-file-export:hover,
 .ReactTable .fa-sync-alt:hover,
+.ReactTable .fa-file-alt:hover,
 .ReactTable .fa-file-prescription:hover,
 .ReactTable .fa-prescription:hover,
 .ReactTable .fa-arrow-right:hover,
