--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -58,6 +58,8 @@
   .fa-walking,
   .fa-file-export,
   .fa-sync-alt,
+  .fa-file-alt,
+  .fa-file-image,
   .fa-file-prescription,
   .fa-prescription,
   .fa-arrow-right,
@@ -85,8 +87,10 @@
   .fa-flask:hover,
   .fa-file-signature:hover,
   .fa-walking:hover,
+  .fa-file-image:hover,
   .fa-file-export:hover,
   .fa-sync-alt:hover,
+  .fa-file-alt:hover,
   .fa-file-prescription:hover,
   .fa-prescription:hover,
   .fa-arrow-right:hover,
