--- a/client/src/Components/PatientProfile/PatientHistory/PatientHistory.css
+++ b/client/src/Components/PatientProfile/PatientHistory/PatientHistory.css
@@ -1,36 +1,30 @@
 #subjectAccordian .accordion-btn {
-  background-color: #fff;
   color: #444;
-  cursor: pointer;
+  cursor: inherit;
   width: 100%;
-  padding: 15px;
-  border: none;
+  padding: 7px;
   text-align: left;
   outline: none;
   font-size: 15px;
   transition: 0.4s;
-  border-bottom: #e9e9e9; }
+  background-color: #ffffff;
+  border: none; }
 
 #subjectAccordian textarea {
-  border-radius: 0 !important; }
-
-#subjectAccordian .active,
-#subjectAccordian .accordion-btn:hover {
-  background-color: #f1f1f1; }
+  border-radius: 0 !important;
+  border-color: #d3d3d3 !important;
+  border-width: 1px 0 !important;
+  background: #f9f9f9 !important;
+  height: 18.6vh; }
 
 #subjectAccordian .accordion-btn:after {
-  content: "\002B";
   color: #777;
   font-weight: bold;
   float: right;
   margin-left: 5px; }
 
-#subjectAccordian .active:after {
-  content: "\2212"; }
-
 #subjectAccordian .panel {
   width: 100%;
   background-color: white;
-  max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out; }
