--- a/client/src/Components/PatientProfile/PatientHistory/PatientHistory.scss
+++ b/client/src/Components/PatientProfile/PatientHistory/PatientHistory.scss
@@ -1,27 +1,26 @@
 #subjectAccordian {
   .accordion-btn {
-    background-color: #fff;
     color: #444;
-    cursor: pointer;
+    cursor: inherit;
     width: 100%;
-    padding: 15px;
-    border: none;
+    padding: 7px;
     text-align: left;
     outline: none;
     font-size: 15px;
     transition: 0.4s;
-    border-bottom: #e9e9e9;
+    background-color: #ffffff;
+    border: none;
   }
   textarea {
     border-radius: 0 !important;
-  }
-  .active,
-  .accordion-btn:hover {
-    background-color: rgb(241, 241, 241);
+    border-color: #d3d3d3 !important;
+    border-width: 1px 0 !important;
+    background: #f9f9f9 !important;
+    height: 18.6vh;
   }
 
   .accordion-btn:after {
-    content: "\002B";
+    //content: "\002B";
     color: #777;
     font-weight: bold;
     float: right;
@@ -29,16 +28,13 @@
   }
 
   .active:after {
-    content: "\2212";
+    //content: "\2212";
   }
 
   .panel {
     width: 100%;
     background-color: white;
-    max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
-    textarea {
-    }
   }
 }
