--- a/client/src/index.css
+++ b/client/src/index.css
@@ -955,7 +955,16 @@
       :global .tabMaster ul li {
         border-right: 1px solid #e9e9e9;
         margin: 0;
-        padding: 0; }
+        padding: 0;
+        height: 32px; }
+        :global .tabMaster ul li:after {
+          display: block;
+          content: "";
+          border-bottom: solid 3px #34b8bc;
+          transform: scaleX(0);
+          transition: transform 250ms ease-in-out; }
+        :global .tabMaster ul li:hover:after {
+          transform: scaleX(1); }
         :global .tabMaster ul li label {
           font-size: 0.8rem;
           text-transform: uppercase;
@@ -963,10 +972,6 @@
           color: #858585;
           margin: 0;
           border: none; }
-        :global .tabMaster ul li label:hover {
-          cursor: pointer;
-          color: #000;
-          background: linear-gradient(to bottom, #f1f1f1 0%, white 100%); }
       :global .tabMaster ul li.active label {
         border-bottom: 3px solid #34b8bc;
         color: #000; }
