--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1383,6 +1383,18 @@ $forntSize: 0.7rem;
         border-right: 1px solid #e9e9e9;
         margin: 0;
         padding: 0;
+        height: 32px;
+
+        &:after {
+          display: block;
+          content: "";
+          border-bottom: solid 3px #34b8bc;
+          transform: scaleX(0);
+          transition: transform 250ms ease-in-out;
+        }
+        &:hover:after {
+          transform: scaleX(1);
+        }
         label {
           font-size: 0.8rem;
           text-transform: uppercase;
@@ -1391,22 +1403,28 @@ $forntSize: 0.7rem;
           margin: 0;
           border: none;
         }
-        label:hover {
-          cursor: pointer;
-          color: #000;
-          background: linear-gradient(
-            to bottom,
-            #f1f1f1 0%,
-            rgb(255, 255, 255) 100%
-          );
-        }
+        // label:hover {
+        //   cursor: pointer;
+        //   color: #000;
+        //   background: linear-gradient(
+        //     to bottom,
+        //     #f1f1f1 0%,
+        //     rgb(255, 255, 255) 100%
+        //   );
+        // }
       }
       li.active {
+
+        &:hover:after {
+          display: none!important;
+          border:none!important;
+      }
+
         label {
           border-bottom: 3px solid #34b8bc;
-          color: #000;
-        }
+          color: #000; 
       }
+
     }
   }
 }
