--- a/client/src/Components/Pharmacy/PointOfSale/PosListItems/PosListItems.scss
+++ b/client/src/Components/Pharmacy/PointOfSale/PosListItems/PosListItems.scss
@@ -64,6 +64,12 @@
   .ReactTable {
     max-height: 40vh !important;
   }
+
+  @media screen and (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
+    .ReactTable {
+      max-width: 93.5vw !important;
+    }
+  }
 }
 
 .algaehPaperDefault {
