--- a/client/src/styles/algaehCssVariables.scss
+++ b/client/src/styles/algaehCssVariables.scss
@@ -1,5 +1,6 @@
 $fontSize: 0.75rem;
 $fontFamily: "Titillium Web", sans-serif;
+//$fontFamily: "Nunito", sans-serif;
 $fontWeight: normal;
 $color: #7c909b;
 $moz-osx-font-smoothing: grayscale;
