--- a/client/src/Components/Pharmacy/InitialStock/InitialStock.css
+++ b/client/src/Components/Pharmacy/InitialStock/InitialStock.css
@@ -1,3 +1,7 @@
 .hptl-phase1-initial-stock-form .go-button {
   cursor: pointer;
   margin-top: 2.5vh; }
+
+@media screen and (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
+  .hptl-phase1-initial-stock-form #initialStockCntr .ReactTable {
+    max-width: 93.2vw !important; } }
