--- a/client/src/Components/Pharmacy/InitialStock/InitialStock.scss
+++ b/client/src/Components/Pharmacy/InitialStock/InitialStock.scss
@@ -3,4 +3,11 @@
     cursor: pointer;
     margin-top: 2.5vh;
   }
+  #initialStockCntr {
+    @media screen and (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
+      .ReactTable {
+        max-width: 93.2vw !important;
+      }
+    }
+  }
 }
