Revert to Dark theme sidebar menu

--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -43,27 +43,26 @@ header {
   animation-duration: 0.4s; }
 
 /* Light Side Bar Menu */
+/* Dark Side Bar Menu */
 .hptl-phase1-sideMenuBar .sideMenu-header {
-  color: #212529;
-  background: #f7f7f7;
+  color: white;
+  background: #292929;
   padding-top: 50px; }
 
 .hptl-phase1-sideMenuBar .side-menu-title {
   padding: 5px 0;
   line-height: 35px;
-  border-bottom: 2px solid #d2d2d2;
-  border-top: 1px solid #fff;
+  border-bottom: 2px solid #000000;
+  border-top: 1px solid #505050;
   cursor: pointer;
   font-size: 0.9rem; }
   .hptl-phase1-sideMenuBar .side-menu-title i {
-    text-shadow: 0px 2px 0px #fff; }
+    text-shadow: 0px 2px 0px #000; }
 
 .hptl-phase1-sideMenuBar .side-menu-title:hover {
-  background: #00bcb0;
-  color: #fff;
-  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.1); }
+  background: #00bcb0; }
   .hptl-phase1-sideMenuBar .side-menu-title:hover i {
-    text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.1); }
+    text-shadow: 0px 2px 0px #000; }
 
 .hptl-phase1-sideMenuBar .side-menu-arrow {
   margin-top: 5px; }
@@ -84,20 +83,22 @@ header {
     border-bottom: 1px dotted #4e4e4e;
     text-transform: uppercase;
     cursor: pointer;
-    line-height: 20px;
-    background: #7b7b7b;
-    color: #fff; }
+    color: #dcac66;
+    line-height: 20px; }
     .hptl-phase1-sideMenuBar ul.tree-structure-menu li i {
-      margin-right: 27px;
-      margin-left: 12px;
+      margin-right: 12px;
+      margin-left: 14px;
       display: inline-block;
       vertical-align: initial; }
     .hptl-phase1-sideMenuBar ul.tree-structure-menu li span {
       display: inline-block;
-      width: 78%; }
+      width: 80%; }
   .hptl-phase1-sideMenuBar ul.tree-structure-menu li:hover {
     background: #00bcb0;
     color: #fff; }
+
+.hptl-phase1-sideMenuBar .sub-menu-option {
+  background: #000000; }
 
 .hptl-phase1-sideMenuBar .close-menu {
   padding-top: 5px;
@@ -108,7 +109,7 @@ header {
   display: flex;
   padding: 5px;
   font-size: 20px;
-  height: 52px;
+  height: 49px;
   background: #000;
   position: fixed;
   width: 255px;
@@ -129,7 +130,6 @@ header {
 .hptl-phase1-sideMenuBar svg {
   height: 23px; }
 
-/* Dark Side Bar Menu */
 .hptl-phase1-footer .main {
   background-color: #000000 !important;
   border-top: 1px solid #0000;
