--- a/client/src/Components/Wrapper/autoComplete.css
+++ b/client/src/Components/Wrapper/autoComplete.css
@@ -63,8 +63,6 @@
   position: absolute;
   max-width: 22vw;
   min-width: -webkit-fill-available;
-  top: 100%;
-  bottom: auto;
   left: 0;
   max-height: 30vh;
   overflow: auto;
@@ -73,6 +71,14 @@
   -webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
   box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.06);
   z-index: 100; }
+
+.dropUp {
+  top: 100%;
+  bottom: auto; }
+
+.dropDown {
+  top: auto;
+  bottom: 100%; }
 
 .myUL li span {
   border: 1px solid #ddd;
