--- a/client/src/Components/Procurement/DeliveryNoteEntry/DeliveryNoteEntry.scss
+++ b/client/src/Components/Procurement/DeliveryNoteEntry/DeliveryNoteEntry.scss
@@ -1,2 +1,14 @@
 .hims-delivery-note-entry {
 }
+
+#DNGrid {
+  .ReactTable {
+    max-width: 95vw !important;
+  }
+
+  @media screen and (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
+    .ReactTable {
+      max-width: 93vw !important;
+    }
+  }
+}
