--- a/client/src/Components/Procurement/PurchaseOrderEntry/PurchaseOrderEntry.css
+++ b/client/src/Components/Procurement/PurchaseOrderEntry/PurchaseOrderEntry.css
@@ -1,6 +1,6 @@
-#PointSaleGrid .ReactTable {
+#POGrid .ReactTable {
   max-width: 95vw !important; }
 
 @media screen and (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
-  #PointSaleGrid .ReactTable {
+  #POGrid .ReactTable {
     max-width: 93vw !important; } }
