--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -6,6 +6,26 @@ $forntSize: 0.7rem;
     height: 8px;
   }
 
+  //UCAF Styles
+  label {
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 0.7rem;
+  }
+
+  .UCAF20_Report {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    font-size: 0.9rem;
+  }
+
+  .UCAF20_Report td {
+    border: 1px solid #f2f2f2;
+    padding: 2px 4px;
+    margin: 0;
+  }
+
   //Reports Styles
   .print-body {
     body {
