--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
@@ -209,6 +209,11 @@ header {
       background: rgb(0, 188, 176);
       color: #fff;
     }
+
+    li.active {
+      background: rgb(0, 188, 176);
+      color: #fff;
+    }
   }
   .sub-menu-option {
     background: #000000;
