--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -15,6 +15,16 @@ body {
   width: 140px;
   background-size: 100%; }
 
+:global .subMenuSearchFld {
+  border-radius: 0 !important;
+  border: none !important;
+  background: none !important;
+  border-bottom: 1px solid #fff !important;
+  width: 96% !important;
+  color: #fff !important; }
+  :global .subMenuSearchFld::placeholder {
+    color: #b4b4b4 !important; }
+
 :global .btn {
   padding: 5px 10px;
   font-size: 0.8rem;
