--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -19,8 +19,8 @@ body {
   border-radius: 0 !important;
   border: none !important;
   background: none !important;
-  border-bottom: 1px solid #fff !important;
-  width: 96% !important;
+  border-right: 1px solid #505050 !important;
+  width: 80% !important;
   color: #fff !important; }
   :global .subMenuSearchFld::placeholder {
     color: #b4b4b4 !important; }
