--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -21,8 +21,8 @@ body {
     border-radius: 0 !important;
     border: none !important;
     background: none !important;
-    border-bottom: 1px solid #fff !important;
-    width: 96% !important;
+    border-right: 1px solid #505050 !important;
+    width: 80% !important;
     color: #fff !important;
     &::placeholder {
       color: rgb(180, 180, 180) !important;
