--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -148,6 +148,16 @@ header {
 .screenDisplay {
   display: flex;
   width: 100%; }
+  .screenDisplay i {
+    border-left: 1px solid rgba(0, 0, 0, 0.12);
+    border-right: 1px solid rgba(0, 0, 0, 0.12);
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 13px;
+    margin: -2px 5px; }
+    .screenDisplay i:hover {
+      background: rgba(0, 0, 0, 0.1);
+      cursor: pointer; }
   .screenDisplay h5 {
     line-height: 46px;
     padding: 0;
