--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -154,7 +154,7 @@ header {
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 13px;
-    margin: -2px 5px; }
+    margin: -2px 10px -2px 0; }
     .screenDisplay i:hover {
       background: rgba(0, 0, 0, 0.1);
       cursor: pointer; }
