--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -9,10 +9,17 @@ body {
 :global #hisapp {
   padding-bottom: 5px; }
 
-:global .appLogoOnly {
-  background: url(../assets/svg/HIMS_LOGO_ONLY.svg) no-repeat center;
-  width: 140px;
-  background-size: 100%; }
+:global .appLogoCntr {
+  background: linear-gradient(to right, rgba(228, 171, 89, 0.76) 0%, rgba(0, 186, 190, 0.1) 100%);
+  width: 150px;
+  margin: -4px 0; }
+  :global .appLogoCntr .appLogoOnly {
+    background: url(../assets/svg/HIMS_LOGO_ONLY.svg) no-repeat center;
+    background-size: 90%;
+    width: 100%;
+    height: 54px;
+    margin: 0;
+    padding: 0; }
 
 :global .subMenuSearchFld {
   border-radius: 0 !important;
