--- a/client/src/Components/concurrent-test.scss
+++ b/client/src/Components/concurrent-test.scss
@@ -14,7 +14,20 @@
   //   letter-spacing: 0.15em; /* Adjust as needed */
   //   animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
   // }
-
+  .console-log-div {
+    position: relative;
+    i {
+      position: absolute;
+      right: 15px;
+      top: 0px;
+      border: 1px solid #000;
+      font-size: 2rem;
+      &:hover {
+        color: yellow;
+        cursor: pointer;
+      }
+    }
+  }
   /* The typing effect */
   @keyframes typing {
     from {
