--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
@@ -233,7 +233,6 @@ header {
     position: fixed;
     width: 255px;
     z-index: 9;
-    border-bottom: 1px solid #3e3e3e;
   }
   .sideBarClose {
     position: absolute;
@@ -298,5 +297,27 @@ header {
     float: right;
     position: absolute;
     margin-left: 88%;
+  }
+}
+.selectedLang {
+  float: right;
+  font-size: 0.7rem;
+  margin-right: 10px;
+  border: 1px solid #fff;
+  padding: 0px 3px;
+  border-radius: 2px;
+}
+.loginProfileInfo {
+  font-size: 0.8rem;
+  span {
+    display: block;
+    white-space: nowrap;
+    margin-right: 10px;
+    // border-left: 1px solid #009989;
+    padding-left: 10px;
+    &:first-child {
+      font-size: 0.9rem;
+      font-weight: 600;
+    }
   }
 }
