--- a/client/src/Components/Appointment/appointment.scss
+++ b/client/src/Components/Appointment/appointment.scss
@@ -98,14 +98,16 @@
     // }
 
     .calendar .col {
-      border: 1px solid #009e94;
+      border: 1px solid #3aa4a9;
       font-size: 1.3rem;
       padding-right: 3px;
       padding-left: 3px;
+      text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
     }
     .calendar .col:hover {
-      background: #009e94;
+      background: #3aa4a9;
       cursor: pointer;
+      text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.3);
     }
 
     .calendar .col span {
@@ -117,7 +119,7 @@
     }
     .activeDate {
       border-bottom: 4px solid yellow !important;
-      background: #009e94;
+      background: #3aa4a9;
     }
     .CurrentDate {
       border-top: 2px solid yellow !important;
