--- a/client/src/Components/RegistrationPatient/PatientDetails/PatientDetails.css
+++ b/client/src/Components/RegistrationPatient/PatientDetails/PatientDetails.css
@@ -5,4 +5,5 @@
   border-top-right-radius: 5px; }
 
 .arabic-txt-fld input {
-  text-align: right !important; }
+  text-align: right !important;
+  direction: rtl !important; }
