--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -508,7 +508,8 @@ $forntSize: 0.7rem;
 
   /* Portlet Title */
   .portlet-title {
-    padding: 0;
+    padding: 0 15px;
+    margin: -5px -15px 0;
     min-height: 35px;
     border-bottom: 1px dashed #eee;
     margin-bottom: 5px;
