--- a/client/src/Components/PatientProfile/patientprofile.scss
+++ b/client/src/Components/PatientProfile/patientprofile.scss
@@ -120,7 +120,7 @@
   .patientTopNav {
     background: white;
     height: 35px;
-    padding: 5px 0 0;
+    padding: 0;
     width: 100%;
     color: #797979;
     font-size: 1rem;
@@ -131,20 +131,36 @@
     ul {
       position: relative;
       li {
+        &:after {
+          display: block;
+          content: "";
+          border-bottom: solid 3px #00a9ad;
+          transform: scaleX(0);
+          transition: transform 150ms ease-in-out;
+        }
+        &:hover:after {
+          transform: scaleX(1);
+        }
         span {
           font-size: 0.8rem;
           text-transform: uppercase;
-          padding: 5px 15px;
+          padding: 9px 15px 8px;
           color: #858585;
+          cursor: pointer;
         }
         span.active {
-          border-bottom: 3px solid #34b8bc;
-          color: #000;
-        }
-        span:hover {
-          border-bottom: 3px solid #34b8bc;
-          color: #000;
-          cursor: pointer;
+          border-bottom: solid 3px #00a9ad;
+          color: #fff;
+          background: #34b8bc;
+          &:hover {
+            cursor: default;
+            color: #fff;
+          }
+          &:hover:after {
+            display: none !important;
+            border: none !important;
+            cursor: pointer;
+          }
         }
       }
     }
