--- a/client/src/Components/PatientProfile/patientprofile.css
+++ b/client/src/Components/PatientProfile/patientprofile.css
@@ -94,7 +94,7 @@
 .patientProfile .patientTopNav {
   background: white;
   height: 35px;
-  padding: 5px 0 0;
+  padding: 0;
   width: 100%;
   color: #797979;
   font-size: 1rem;
@@ -104,18 +104,31 @@
   z-index: 99; }
   .patientProfile .patientTopNav ul {
     position: relative; }
+    .patientProfile .patientTopNav ul li:after {
+      display: block;
+      content: "";
+      border-bottom: solid 3px #00a9ad;
+      transform: scaleX(0);
+      transition: transform 150ms ease-in-out; }
+    .patientProfile .patientTopNav ul li:hover:after {
+      transform: scaleX(1); }
     .patientProfile .patientTopNav ul li span {
       font-size: 0.8rem;
       text-transform: uppercase;
-      padding: 5px 15px;
-      color: #858585; }
-    .patientProfile .patientTopNav ul li span.active {
-      border-bottom: 3px solid #34b8bc;
-      color: #000; }
-    .patientProfile .patientTopNav ul li span:hover {
-      border-bottom: 3px solid #34b8bc;
-      color: #000;
+      padding: 9px 15px 8px;
+      color: #858585;
       cursor: pointer; }
+    .patientProfile .patientTopNav ul li span.active {
+      border-bottom: solid 3px #00a9ad;
+      color: #fff;
+      background: #34b8bc; }
+      .patientProfile .patientTopNav ul li span.active:hover {
+        cursor: default;
+        color: #fff; }
+      .patientProfile .patientTopNav ul li span.active:hover:after {
+        display: none !important;
+        border: none !important;
+        cursor: pointer; }
   .patientProfile .patientTopNav .patient-quick-info {
     color: #34b8bc;
     margin: 0;
