--- a/client/src/Components/Wrapper/autoComplete.scss
+++ b/client/src/Components/Wrapper/autoComplete.scss
@@ -97,7 +97,7 @@
   bottom: 100%;
 }
 
-.myUL li span {
+.myUL li a {
   border: 1px solid #ddd;
   margin-top: -1px;
   background-color: #ffffff;
@@ -105,18 +105,17 @@
   text-decoration: none;
   display: block;
   font-size: 0.8rem;
-  span {
-    border: none;
-    background-color: transparent !important;
-    &:before {
-      top: 11px !important;
-    }
-    &:after {
-      top: 6px !important;
-    }
+  color: #212529;
+  cursor: pointer;
+
+  &:before {
+    top: 11px !important;
+  }
+  &:after {
+    top: 6px !important;
   }
 }
 
-.myUL li span:hover:not(.header) {
+.myUL li a:hover:not(.header) {
   background-color: #eee;
 }
