--- a/client/src/Components/Appointment/appointment.css
+++ b/client/src/Components/Appointment/appointment.css
@@ -3,14 +3,16 @@
   overflow-y: hidden;
   width: 94.8vw; }
 
-.appointment .appointment-inner-cntr span.noDoctor {
-  display: inline-block;
-  font-size: 1.4rem;
-  margin: auto;
-  width: 100%;
-  text-align: center;
-  color: #a7a7a7;
-  padding: 25vh 0; }
+.appointment .appointment-inner-cntr {
+  min-width: 94vw !important; }
+  .appointment .appointment-inner-cntr span.noDoctor {
+    display: inline-block;
+    font-size: 1.4rem;
+    margin: auto;
+    width: 100%;
+    text-align: center;
+    color: #a7a7a7;
+    padding: 25vh 0; }
 
 .appointment .my-calendar {
   text-align: center;
@@ -270,3 +272,7 @@
       width: 239px;
       color: #ddd;
       text-align: center; }
+
+.appointment .highlightGrey {
+  background: #e4e4e4;
+  border: 1px solid #acaaaa; }
