--- a/client/src/Components/InsuranceSetup/ServicePriceList/ServicePriceList.css
+++ b/client/src/Components/InsuranceSetup/ServicePriceList/ServicePriceList.css
@@ -1,14 +1,13 @@
 .hptl-phase1-price-insurance-form {
   background: #fff;
-  border-radius: 5px; }
-  .hptl-phase1-price-insurance-form .go-button {
-    cursor: pointer;
-    margin-top: 15px; }
-  .hptl-phase1-price-insurance-form th,
-  .hptl-phase1-price-insurance-form td {
-    font-size: 11px;
-    border-right: 1px solid #e6e6e6; }
-
-.Paper {
-  padding: 15px;
-  border: 1px solid #5f5f5f; }
+  border-radius: 5px;
+}
+.hptl-phase1-price-insurance-form .go-button {
+  cursor: pointer;
+  margin-top: 15px;
+}
+.hptl-phase1-price-insurance-form th,
+.hptl-phase1-price-insurance-form td {
+  font-size: 11px;
+  border-right: 1px solid #e6e6e6;
+}
