--- a/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.css
+++ b/client/src/Components/RegistrationPatient/Billing/BillingDetails/AddBillingForm.css
@@ -1,7 +1,3 @@
-.hptl-phase1-billing-form {
-  background: #fff;
-  border-radius: 5px; }
-
 .hptl-phase1-add-billing-form .primary-details {
   padding: 10px; }
   .hptl-phase1-add-billing-form .primary-details .primary-box-container {
@@ -13,10 +9,6 @@
     padding: 15px;
     font-weight: 600;
     font-size: 15px; }
-
-.hptl-phase1-add-billing-form .Paper {
-  border: 1px solid #5f5f5f;
-  min-height: 43vh; }
 
 .hptl-phase1-add-billing-form .Paper-secondary {
   border: 1px solid #5f5f5f; }
@@ -63,3 +55,9 @@
 .totalAmt {
   background: #44b8bd;
   color: #fff; }
+
+.Paper {
+  border-radius: 5px;
+  border: 1px solid #d3d3d3;
+  padding: 15px;
+  background: #fff; }
