--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
@@ -318,6 +318,7 @@ header {
     &:first-child {
       font-size: 0.9rem;
       font-weight: 600;
+      text-transform: uppercase;
     }
   }
 }
