Removed Material App bar + 80% code for sidebar menu select and search + fixed MRD landing Page UI

--- a/client/src/Components/MRD/MRDList/mrd_list.css
+++ b/client/src/Components/MRD/MRDList/mrd_list.css
@@ -1,2 +1,2 @@
-.mrd-list #mrdList-Cntr .ReactTable {
-  min-height: 68vh !important; }
+.mrd-list #mrdListCntr .ReactTable {
+  max-height: 75vh !important; }
