--- a/client/src/Components/MRD/MRDList/mrd_list.scss
+++ b/client/src/Components/MRD/MRDList/mrd_list.scss
@@ -1,7 +1,7 @@
 .mrd-list {
-    #mrdList-Cntr{
-        .ReactTable{
-            min-height: 68vh !important;
-        }
+  #mrdListCntr {
+    .ReactTable {
+      max-height: 75vh !important;
     }
+  }
 }
