--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -335,12 +335,12 @@ $forntSize: 0.7rem;
     //font-weight: bolder;
   }
   .availableClass {
-    background-color: #56ce7480 !important;
+    background-color: rgba(0, 255, 64, 0.13) !important;
     //color: white;
     //font-weight: bolder;
   }
   .underProcessClass {
-    background-color: #cea6fc !important;
+    background-color: rgba(255, 0, 0, 0.08) !important;
     color: white;
     font-weight: bolder;
   }
