--- a/client/src/Components/NurseWorkbench/nurse_workbench.css
+++ b/client/src/Components/NurseWorkbench/nurse_workbench.css
@@ -76,3 +76,75 @@
     background: #3aa4a9; }
   .nurse_workbench .my-calendar .CurrentDate {
     border-top: 2px solid yellow !important; }
+
+.nurse_workbench .opPatientList .opList {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  height: 65.5vh;
+  overflow: auto; }
+  .nurse_workbench .opPatientList .opList .noPatientDiv {
+    margin-top: 15%;
+    text-align: center;
+    font-size: 0.9rem;
+    color: #929292; }
+  .nurse_workbench .opPatientList .opList li {
+    margin: 4px 0;
+    padding: 3px 0;
+    list-style: none;
+    border: 1px solid #f2f2f2;
+    border-radius: 5px; }
+    .nurse_workbench .opPatientList .opList li .op-sec-1 {
+      width: 10px;
+      width: 20%;
+      vertical-align: text-top;
+      display: inline-block;
+      text-align: center;
+      border-right: 1px solid grey;
+      margin-right: 10px; }
+      .nurse_workbench .opPatientList .opList li .op-sec-1 i {
+        width: 30px;
+        background: yellow;
+        height: 30px;
+        display: block;
+        margin: auto; }
+      .nurse_workbench .opPatientList .opList li .op-sec-1 .appointment-icon {
+        background: url("../../assets/icons/appointment-icon.svg") no-repeat center;
+        background-size: 80%; }
+      .nurse_workbench .opPatientList .opList li .op-sec-1 .walking-icon {
+        background: url("../../assets/icons/walking-icon.svg") no-repeat center;
+        background-size: 80%; }
+      .nurse_workbench .opPatientList .opList li .op-sec-1 .opTime {
+        font-size: 0.7rem; }
+    .nurse_workbench .opPatientList .opList li .op-sec-2 {
+      width: 10px;
+      width: 56%;
+      vertical-align: text-top;
+      display: inline-block; }
+      .nurse_workbench .opPatientList .opList li .op-sec-2 .opPatientName {
+        display: block;
+        font-size: 1rem;
+        margin-top: 5px; }
+      .nurse_workbench .opPatientList .opList li .op-sec-2 .opStatus {
+        display: block;
+        font-size: 0.7rem; }
+      .nurse_workbench .opPatientList .opList li .op-sec-2 .nursing {
+        color: #34b8bc; }
+      .nurse_workbench .opPatientList .opList li .op-sec-2 .checkedIn {
+        color: #00bb4b; }
+    .nurse_workbench .opPatientList .opList li .op-sec-3 {
+      width: 20%;
+      line-height: 53px;
+      vertical-align: text-top;
+      display: inline-block;
+      text-align: center; }
+      .nurse_workbench .opPatientList .opList li .op-sec-3 .opPatientStatus {
+        display: block;
+        font-size: 0.7rem; }
+      .nurse_workbench .opPatientList .opList li .op-sec-3 .newVisit {
+        color: #ff8800; }
+      .nurse_workbench .opPatientList .opList li .op-sec-3 .followUp {
+        color: #ff005f; }
+  .nurse_workbench .opPatientList .opList li:hover {
+    background: #ebfeff;
+    cursor: pointer; }
